# HomeWork

./: .gitignore  README.md
AVS/task1/: CMakeLists.txt  README.md  main.cpp
AVS/task1/app/: task
AVS/task1/results/: result1.txt  result5.txt  result_sorted1.txt  result_sorted2.txt  result_sorted5.txt
AVS/task1/src/animals/animal/: Animal.cpp  Animal.h
AVS/task1/src/animals/beast/: Beast.cpp  Beast.h
AVS/task1/src/animals/bird/: Bird.cpp  Bird.h
AVS/task1/src/animals/fish/: Fish.cpp  Fish.h
AVS/task1/src/animals/info/: Info.h
AVS/task1/src/container/: Container.cpp  Container.h
AVS/task1/src/random/: Random.cpp  Random.h
AVS/task1/tests/: test1.txt  test2.txt  test3.txt
AVS/task2/: CMakeLists.txt  README.md  main.cpp
AVS/task2/src/animals/animal/: Animal.cpp  Animal.h
AVS/task2/src/animals/beast/: Beast.cpp  Beast.h
AVS/task2/src/animals/bird/: Bird.cpp  Bird.h
AVS/task2/src/animals/fish/: Fish.cpp  Fish.h
AVS/task2/src/container/: Container.cpp  Container.h
AVS/task2/src/controller/: TaskController.cpp  TaskController.h
AVS/task2/src/input/: InputProvider.h
AVS/task2/src/random/: RandomUtil.cpp  RandomUtil.h
AVS/task2/src/sorter/: ContainerSorter.h
AVS/task2/src/sorter/impl/: StraightSelectorSorter.cpp  StraightSelectorSorter.h
AVS/task2/src/ui/input/: InputProvider.h
AVS/task2/src/ui/input/file/: FileInputProvider.cpp  FileInputProvider.h
AVS/task2/src/ui/input/random/: RandomInputProvider.cpp  RandomInputProvider.h
AVS/task2/src/ui/output/: OutputProvider.h
AVS/task2/tests/: test2.txt
AVS/task3/: README.md  main.py
(+513 files in other folders)
